# PythonCythonTemplate

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py  test.py
src/csrc/: Test.cpp  Test.h
src/testcython/: __init__.py  ctest.cpp  ctest.pyx  testcython.py
